0930 추가요청 건

--- a/html/1-4_회원가입-이용동의(인재용).html
+++ b/html/1-4_회원가입-이용동의(인재용).html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="box-wh">
-                        <p class="join3-title">전문성 관련 개인정보 수집/이용 내역 <strong>(선택)</strong></p>
+                        <p class="join3-title">전문성 관련 개인정보 수집/이용 내역 <strong>(필수)</strong></p>
                         <div class="table-nomal">
                             <div class="table-nomal-tr">
                                 <div class="table-nomal-th">수집 및 이용하는 개인정보 항목</div>
