--- a/html/3-1_인재정보등록-신청.html
+++ b/html/3-1_인재정보등록-신청.html
@@ -461,8 +461,11 @@
                         </div>
                     </div>    
                 </form>
-            <div class="btn-wrap form-btn-wrap">
-                <button class="btn-close btn-round">취소</button>
+            <button class="btn-close btn-round btn-left">초기화</button>
+
+            <div class="btn-wrap form-btn-wrap two-btn-wrap">
+                
+                <button class="btn-wh btn-round">임시저장</button>
                 <button class="btn-bl btn-round">다음</button>
             </div>
         </div>
