--- a/html/3-4_인재정보등록-완료.html
+++ b/html/3-4_인재정보등록-완료.html
@@ -99,7 +99,11 @@
                         완료되었습니다.</p>
                     <p class="register__info">회원님의 청년인재정보 등록 신청은 청년인재데이터베이스 담당자 검토 후<br>
                         담당자의 승인을 받아야 등록 완료 처리가 됩니다.</p>
-                    <a href="#" download class="more-btn more-btn-bl">홈으로 이동</a>
+                    <div class="register__bnt-wrap">
+                        <a href="#" download class="print-btn btn-bl">인재정보 인쇄</a>
+                        <a href="#" download class="more-btn more-btn-bl">홈으로 이동</a>
+                    </div>
+
                 </div>
             </div>
         </div>
