--- a/html/8-11_마이페이지-내정보열람목록.html
+++ b/html/8-11_마이페이지-내정보열람목록.html
@@ -83,7 +83,7 @@
                 <a href="#" class="btn-close btn-round">회원탈퇴</a>
             </div>
             <h2 class="contents-title">내 정보 활용 목록</h2>
-
+            <a href="#" class="print-btn2 btn-wh">인쇄</a>
           <div class="container">
               <form>
                 <div class="table-top">
