--- a/html/8-9_마이페이지-나의인재정보관리.html
+++ b/html/8-9_마이페이지-나의인재정보관리.html
@@ -87,6 +87,7 @@
                 <a href="#" class="btn-close btn-round">회원탈퇴</a>
             </div>
             <h2 class="contents-title">나의 인재정보 관리</h2>
+            <a href="#" class="print-btn2 btn-wh">인쇄</a>
                 <div class="container">
                     <p class="container__title">인재정보 반영 현황</p>
                     <div class="table-nomal mypage9">
@@ -468,10 +469,13 @@
                         </div>
                     </div>    
                 </form>
-            <div class="btn-wrap form-btn-wrap">
-                <button class="btn-close btn-round">초기화</button>
-                <button class="btn-bl btn-round">저장</button>
-            </div>
+                <button class="btn-close btn-round btn-left">초기화</button>
+
+                <div class="btn-wrap form-btn-wrap two-btn-wrap">
+                    
+                    <button class="btn-wh btn-round">임시저장</button>
+                    <button class="btn-bl btn-round">다음</button>
+                </div>
         </div>
     </section>
     <footer>
