--- a/html/9-1_사이트맵_개인.html
+++ b/html/9-1_사이트맵_개인.html
@@ -93,27 +93,15 @@
                     <a href="#" class="contents-title">인재정보등록</a>
                 </div>
                 <div class="site-map">
-                    <a href="#" class="contents-title">검색요청</a>
-                    <a href="#">직접검색 요청</a>
-                    <a href="#">직접검색 요청현황</a>
-                    <a href="#">인재추천 요청</a>
-                    <a href="#">인재추천 요청현황</a>
-                </div>
-                <div class="site-map">
-                    <a href="#" class="contents-title">인재검색</a>
-                    <a href="#">통합검색</a>
-                    <a href="#">관심인물 관리</a>
-                </div>
-                <div class="site-map">
                     <a href="#" class="contents-title">공지사항</a>
                     <a href="#">공지사항</a>
                     <a href="#">자주하는 질문(FAQ)</a>
                 </div>
                 <div class="site-map">
-                    <a href="#" class="contents-title">검색요청</a>
+                    <a href="#" class="contents-title">마이페이지</a>
                     <a href="#">내 정보 관리</a>
                     <a href="#">인증서 관리</a>
-                    <a href="#">내 정보 열람 목록</a>
+                    <a href="#">내 정보 활용 목록</a>
                     <a href="#">회원탈퇴</a>
                 </div>
             </div>
