--- a/html/9-2_사이트맵_기관.html
+++ b/html/9-2_사이트맵_기관.html
@@ -113,10 +113,9 @@
                     <a href="#">자주하는 질문(FAQ)</a>
                 </div>
                 <div class="site-map">
-                    <a href="#" class="contents-title">검색요청</a>
+                    <a href="#" class="contents-title">마이페이지</a>
                     <a href="#">내 정보 관리</a>
                     <a href="#">인증서 관리</a>
-                    <a href="#">내 정보 열람 목록</a>
                     <a href="#">회원탈퇴</a>
                 </div>
             </div>
